Add second template

--- a/.github/ISSUE_TEMPLATE/design.yml
+++ b/.github/ISSUE_TEMPLATE/design.yml
@@ -1,6 +1,6 @@
-name: Frontend Task
-description: フロントエンドの実装におけるIssueを作成します
-title: "[FE]: "
+name: Design Task
+description: デザインにおけるIssueを作成します
+title: "[UI/UX]: "
 labels: ["frontend"]
 assignees:
   - marromugi
