--- a/.github/ISSUE_TEMPLATE/design.yml
+++ b/.github/ISSUE_TEMPLATE/design.yml
@@ -1,7 +1,7 @@
 name: Design Task
 description: デザインにおけるIssueを作成します
 title: "[UI/UX]: "
-labels: ["frontend"]
+labels: ["UI/UX"]
 assignees:
   - marromugi
 body:
